# databend-parser

./: Cargo.toml
src/common/exception/: Cargo.toml
src/common/exception/src/: exception_into.rs  lib.rs
src/meta/app/: Cargo.toml
src/meta/app/src/: app_error.rs  lib.rs
src/meta/app/src/data_mask/: mod.rs
src/meta/app/src/principal/: mod.rs  user_defined_function.rs
src/meta/app/src/schema/: catalog.rs  database.rs  index.rs  mod.rs  table.rs  virtual_column.rs
src/meta/app/src/share/: mod.rs  share.rs
src/query/ast/: Cargo.toml
src/query/ast/src/: lib.rs
src/query/ast/src/ast/: query.rs
src/query/ast/src/ast/format/: ast_format.rs
src/query/ast/src/ast/statements/: catalog.rs  database.rs  share.rs  statement.rs  user.rs
src/query/ast/src/meta/: mod.rs  principal_identity.rs
src/query/ast/src/parser/: statement.rs
src/query/ast/src/visitors/: visitor.rs  visitor_mut.rs
