[workspace.package]
version = "0.1.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[workspace]
resolver = "2"
members = [
    # Common
    "src/common/arrow",
    "src/common/auth",
    "src/common/base",
    "src/common/building",
    "src/common/cache",
    "src/common/compress",
    "src/common/exception",
    "src/common/grpc",
    "src/common/hashtable",
    "src/common/http",
    "src/common/io",
    "src/common/metrics",
    "src/common/vector",
    # Query
    "src/query/ast",
    "src/query/datavalues",
    "src/query/expression",

    # Meta
    "src/meta/stoerr",
    "src/meta/types",
    "src/meta/app",
    "src/meta/kvapi",
]

[workspace.dependencies]
# databend maintains:
sled = { git = "https://github.com/datafuse-extras/sled", tag = "v0.34.7-datafuse.1", default-features = false }
opendal = { version = "0.39", features = [
    "layers-minitrace",
    "layers-metrics",
    "services-ipfs",
    "services-moka",
    "services-redis",
    "trust-dns",
] }
ethnum = { version = "1.3.2" }
ordered-float = { version = "3.6.0", default-features = false }
jsonb = { git = "https://github.com/datafuselabs/jsonb", rev = "54dba06" }

# openraft = { version = "0.8.2", features = ["compat-07"] }
# For debugging
openraft = { git = "https://github.com/drmingdrmer/openraft", tag = "v0.8.4-alpha.8", features = [
    "compat-07",
    "tracing-log",
] }

# type helper
derive_more = "0.99.17"
itertools = "0.10.5"
lazy_static = "1.4.0"

# future and async
futures = "0.3.24"
futures-util = "0.3.24"
stream-more = "0.1.3"
bytes = "1.5.0"

# error
anyhow = { version = "1.0.65" }
anyerror = { version = "=0.1.8" }
thiserror = { version = "1" }

# versioning
semver = "1.0.14"

# CLI
clap = { version = "4.4.2", features = ["derive", "env"] }

# server
tonic = { version = "0.9.2", features = ["transport", "codegen", "prost", "tls-roots", "tls"] }

# serialization
prost = { version = "0.11.0" }
serde = { version = "1.0.164", features = ["derive", "rc"] }
serde_json = { version = "1.0.85", default-features = false, features = ["preserve_order"] }
tonic-build = { version = "0.9.2" }

# chrono
chrono = { version = "0.4.24", features = ["serde"] }
chrono-tz = { version = "0.6.3", features = ["serde"] }

# memory
bumpalo = "3.12.0"
tikv-jemalloc-ctl = { version = "0.5.0", features = ["use_std"] }

# http
reqwest = { version = "0.11.19", default-features = false, features = [
    "json",
    "rustls-tls",
    "rustls-tls-native-roots",
    "trust-dns",
] }

# runtime
tokio = { version = "1.26.0", features = ["full"] }

# backtrace
async-backtrace = "0.2.2"

# observability
logcall = "0.1.5"
log = { version = "0.4.19", features = ["serde", "kv_unstable_std"] }
minitrace = "0.5.1"
prometheus-client = "0.21.2"

# test
mysql_async = { version = "0.32", default-features = false, features = ["rustls-tls"] }

[profile.release]
debug = 1
lto = "thin"
overflow-checks = false
incremental = false
opt-level = "s"
# codegen-units = 1       # Reduce number of codegen units to increase optimizations.

# [profile.release.package]
# arrow2 = { codegen-units = 4 }
# common-functions = { codegen-units = 16 }
# databend-query = { codegen-units = 4 }
# databend-binaries = { codegen-units = 4 }

[profile.bench]
debug = true
overflow-checks = false

[profile.dev]
split-debuginfo = "unpacked"
overflow-checks = false
# wait until https://github.com/rust-lang/rust/issues/100142 fixed
incremental = false

[profile.dev.package]
addr2line = { opt-level = 3 }
adler = { opt-level = 3 }
gimli = { opt-level = 3 }
miniz_oxide = { opt-level = 3 }
object = { opt-level = 3 }
rustc-demangle = { opt-level = 3 }

[profile.test]
opt-level = 0
debug = true
codegen-units = 16
lto = false
debug-assertions = true
overflow-checks = true
rpath = false

[patch.crates-io]
# If there are dependencies that need patching, they can be listed below.

arrow2 = { git = "https://github.com/jorgecarleitao/arrow2", rev = "f609d0c" }
arrow-format = { git = "https://github.com/sundy-li/arrow-format", rev = "c8e11341" }
parquet2 = { git = "https://github.com/jorgecarleitao/parquet2", rev = "693c265" }
metrics = { git = "https://github.com/datafuse-extras/metrics.git", rev = "fc2ecd1" }
opendal = { git = "https://github.com/apache/incubator-opendal", rev = "f02d627" }
icelake = { git = "https://github.com/icelake-io/icelake", rev = "eb3251f" }
# Crates from arrow-rs
arrow = { git = "https://github.com/apache/arrow-rs", rev = "587250c" }
arrow-schema = { git = "https://github.com/apache/arrow-rs", rev = "587250c" }
arrow-array = { git = "https://github.com/apache/arrow-rs", rev = "587250c" }
arrow-ord = { git = "https://github.com/apache/arrow-rs", rev = "587250c" }
arrow-flight = { git = "https://github.com/apache/arrow-rs", rev = "587250c" }
arrow-ipc = { git = "https://github.com/apache/arrow-rs", rev = "587250c" }
arrow-cast = { git = "https://github.com/apache/arrow-rs", rev = "587250c" }
arrow-data = { git = "https://github.com/apache/arrow-rs", rev = "587250c" }
arrow-buffer = { git = "https://github.com/apache/arrow-rs", rev = "587250c" }
parquet = { git = "https://github.com/apache/arrow-rs", rev = "587250c" }
sentry = { git = "https://github.com/getsentry/sentry-rust", rev = "6ef6d97" }
mysql_async = { git = "https://github.com/datafuse-extras/mysql_async", rev = "1adbbcf" }
