[workspace.package]
version = "0.1.0"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[workspace]
resolver = "2"
members = [
    # Common
    "src/common/base",
    "src/common/exception",
    "src/common/io",
    # Query
    "src/query/ast",
]

[workspace.dependencies]
# databend maintains:
opendal = { version = "0.39", features = [
    "layers-minitrace",
    "layers-metrics",
    "services-ipfs",
    "services-moka",
    "services-redis",
    "trust-dns",
] }
ethnum = { version = "1.3.2" }
ordered-float = { version = "3.6.0", default-features = false }

# type helper
itertools = "0.10.5"

# future and async
futures = "0.3.24"
bytes = "1.5.0"

# error
anyhow = { version = "1.0.65" }
anyerror = { version = "=0.1.8" }
thiserror = { version = "1" }

# versioning
semver = "1.0.14"

# server
tonic = { version = "0.9.2", features = ["transport", "codegen", "prost", "tls-roots", "tls"] }

# serialization
prost = { version = "0.11.0" }
serde = { version = "1.0.164", features = ["derive", "rc"] }
serde_json = { version = "1.0.85", default-features = false, features = ["preserve_order"] }

# chrono
chrono = { version = "0.4.24", features = ["serde"] }
chrono-tz = { version = "0.6.3", features = ["serde"] }

# memory
tikv-jemalloc-ctl = { version = "0.5.0", features = ["use_std"] }

# runtime
tokio = { version = "1.26.0", features = ["full"] }

# backtrace
async-backtrace = "0.2.2"

# observability
logcall = "0.1.5"
log = { version = "0.4.19", features = ["serde", "kv_unstable_std"] }
minitrace = "0.5.1"

[profile.release]
debug = 1
lto = "thin"
overflow-checks = false
incremental = false
opt-level = "s"
# codegen-units = 1       # Reduce number of codegen units to increase optimizations.

[profile.bench]
debug = true
overflow-checks = false

[profile.dev]
split-debuginfo = "unpacked"
overflow-checks = false
# wait until https://github.com/rust-lang/rust/issues/100142 fixed
incremental = false

[profile.dev.package]
addr2line = { opt-level = 3 }
adler = { opt-level = 3 }
gimli = { opt-level = 3 }
miniz_oxide = { opt-level = 3 }
object = { opt-level = 3 }
rustc-demangle = { opt-level = 3 }

[profile.test]
opt-level = 0
debug = true
codegen-units = 16
lto = false
debug-assertions = true
overflow-checks = true
rpath = false

[patch.crates-io]
# If there are dependencies that need patching, they can be listed below.

metrics = { git = "https://github.com/datafuse-extras/metrics.git", rev = "fc2ecd1" }
opendal = { git = "https://github.com/apache/incubator-opendal", rev = "f02d627" }
# Crates from arrow-rs
arrow-schema = { git = "https://github.com/apache/arrow-rs", rev = "587250c" }
parquet = { git = "https://github.com/apache/arrow-rs", rev = "587250c" }
